--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "src/pelican-plugins"]
 	path = src/pelican-plugins
 	url = https://github.com/MakeItZone/pelican-plugins.git
-[submodule "src/pelican-bootstrap3"]
-	path = src/pelican-bootstrap3
-	url = https://github.com/MakeItZone/pelican-bootstrap3.git
+[submodule "src/pelican-themes"]
+	path = src/pelican-themes
+	url = https://github.com/MakeItZone/pelican-themes.git
